--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: 請多支持!
+title: Spare no effort ; Leave no regret
 description: "Describe this nonsense."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
